--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <body>
         <div id="page-container">
             <div id="page-content">
-                <nav class="nav-banner navbar navbar-expand-sm sticky-top navbar-light border border-info">
+                <nav class="nav-banner navbar navbar-expand-sm sticky-top navbar-light border-bottom border-info">
                     <a class="navbar-brand" href="index.html"><img src="logo.png" alt="Tom's Logo"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,41 @@
                             <li class="nav-item active">
                                 <a class="nav-link link-nowrap" href="about.html">About Me<span class="sr-only">(current)</span></a></li>
                             <li class="nav-item">
-                                <a class="nav-link link-nowrap" href="nintendo.html">My Nintendo</a></li>
+                                <a class="nav-link link-nowrap" href="nintendo.html">Nintendo</a></li>
                             <li class="nav-item">
                                 <a class="nav-link link-nowrap" href="richmondpark.html">Richmond Park</a></li>
                         </ul>
                     </div>
                 </nav>
-                <div class="container topic-content">
-                    <h3>About Me</h3>
-                    <p>Hello! Thanks for visiting my homepage. You’ve found your way to the ‘About Me’ section so prepare yourself to be regaled with a heavily redacted story of my life.</p>
-                    <p>Once upon a time I was a small boy growing up in Kent in the south east of England, a youngest child with three irritating sisters. My early days were mostly filled with exploring the nearby hills and seaside, seeking out mischief, playing video games and being used as a pawn in elder sibling squabbles.</p>
-                    <p>When it came time to find my way in life I left for London where I studied Computer Science and eventually settled. At first I earned my way working in a bookshop before finding myself in the pharmaceutical industry where I stayed for too many years.</p>
-                    <p>When not holding my nose to the grindstone I like seeking out live music, cocktail making (and drinking), hiking in beautiful locations around the UK, and keeping fit with trail running and swimming. I’m also still partial to video games.</p>
-                    <p>Having recently decided I had done my bit for corporate pharma I left to pursue a long held dream to be a half decent web developer, and here I am studying CS50’s Web Programming with Python and JavaScript. Wish me luck!</p>
+                
+                <div class="container topic-content about">
+                    <div class="row no-gutters">
+                        <div class="col topic-text">
+                            <h3>About Me</h3>
+                            <p>Hello! Thanks for visiting my homepage. You’ve found your way to the ‘About Me’ section so prepare yourself to be regaled with a heavily redacted story of my life.</p>
+                            <p>Once upon a time I was a small boy growing up in Kent in the south east of England, a youngest child with three irritating sisters. My early days were mostly filled with exploring the nearby hills and seaside, seeking out mischief, playing video games and being used as a pawn in elder sibling squabbles.</p>
+                        </div>
+                        <div class="col">
+                            <figure class="figure float-right">
+                                <img class="figure-im" src="Pictures/firstconsole.jpg">
+                                <figcaption class="figure-caption">Playing on my first Nintendo console</figcaption>
+                            </figure>  
+                        </div>
+                    </div>  
+                    
+                    <div class="row no-gutters flex-column-reverse flex-md-row">
+                        <div class="col">
+                            <figure class="figure">
+                                <img class="figure-img" src="Pictures/folkestoneharbour.jpg">
+                                <figcaption class="figure-caption">Fishing boats, Folkestone harbour</figcaption>
+                            </figure>    
+                        </div>
+                        <div class="col topic-text">
+                            <p>When it came time to find my way in life I left for London where I studied Computer Science and eventually settled. At first I earned my way working in a bookshop before finding myself in the pharmaceutical industry where I stayed for many years.</p>
+                            <p>When not holding my nose to the grindstone I like seeking out live music, cocktail making (and drinking), hiking in beautiful locations around the UK, and keeping fit with trail running and swimming. I’m also still partial to video games.</p>
+                            <p>Having recently decided I had done my bit for corporate pharma I left to pursue a long held dream to be a half decent web developer, and here I am studying CS50’s Web Programming with Python and JavaScript. Wish me luck!</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="footer">
