--- a/richmondpark.html
+++ b/richmondpark.html
@@ -10,7 +10,7 @@
     <body>
         <div id="page-container">
             <div id="page-content">
-                <nav class="nav-banner navbar navbar-expand-sm sticky-top navbar-light border border-info">
+                <nav class="nav-banner navbar navbar-expand-sm sticky-top navbar-light border-bottom border-info">
                     <a class="navbar-brand" href="index.html"><img src="logo.png" alt="Tom's Logo"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
                             <li class="nav-item">
                                 <a class="nav-link link-nowrap" href="about.html">About Me</a></li>
                             <li class="nav-item">
-                                <a class="nav-link link-nowrap" href="nintendo.html">My Nintendo</a></li>
+                                <a class="nav-link link-nowrap" href="nintendo.html">Nintendo</a></li>
                             <li class="nav-item active">
                                 <a class="nav-link link-nowrap" href="richmondpark.html">Richmond Park<span class="sr-only">(current)</span></a></li>
                         </ul>
@@ -33,7 +33,95 @@
                     <p>Since moving to London one place stands out as my most cherished of all, Richmond Park. At 2500 acres it is the largest of London’s many Royal Parks and is a Site of Special Scientific Interest, European Special Area of Conservation and National Nature Reserve.</p>
                     <p>The park’s grasslands and ancient woodland are home to roaming deer and numerous species of bird, insect and wildflower. Within the walls you’ll also find locations such as Pembroke Lodge with its Georgian Tea Rooms and views of the Thames Valley, White Lodge, home of the Royal Ballet Lower School, the Pen Ponds, and the Isabella Plantation, a 40 acre woodland garden.</p> 
                     <p>While the royal connection with the area dates back to at least the 11th century, the park we know today began to take shape in 1625 when King Charles I relocated his court to Richmond Palace as a result of plague in the nearby capital. The park was created for the purposes of hunting deer and later enclosed with only limited access for pedestrians. It continued as a country retreat for several royals over the coming centuries until an Act of Parliament in 1872 established full public access.</p>
+                    <br>
+                    <h6>Some of many species to be found in the park:</h6>
+                    <table class="table table-striped table-sm">
+                        <thead>
+                            <tr class="bg-info">
+                                <td>Species</td>
+                                <td>Binomial</td>
+                                <td>Conservation status</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Red deer</td>
+                                <td>Cervus elaphus</td> 
+                                <td>Least concern</td> 
+                            </tr>
+                            <tr>
+                                <td>Fallow deer</td> 
+                                <td>Dama dama</td> 
+                                <td>Least concern</td> 
+                            </tr>
+                            <tr>
+                                <td>Rose-ringed parakeet</td> 
+                                <td>Psittacula krameri</td> 
+                                <td>Least concern</td> 
+                            </tr>
+                            <tr>
+                                <td>Skylark</td> 
+                                <td>Alauda arvensis</td> 
+                                <td>Least concern</td> 
+                            </tr>
+                            <tr>
+                                <td>Small heath butterfly </td> 
+                                <td>Coenonympha pamphilus</td> 
+                                <td>Priority species</td> 
+                            </tr>
+                            <tr>
+                                <td>Purple hairstreak butterfly</td> 
+                                <td>Neozephyrus quercus</td> 
+                                <td>Low priority</td> 
+                            </tr>
+                            <tr>
+                                <td>Double line moth</td> 
+                                <td>Mythimna turca</td> 
+                                <td>Priority species</td> 
+                            </tr>
+                            <tr>
+                                <td>Common pipistrelle bat</td> 
+                                <td>Pipistrellus pipistrellus</td> 
+                                <td>Least concern</td> 
+                            </tr>
+                            <tr>
+                                <td>Daubenton's bat</td> 
+                                <td>Myotis daubentonii</td> 
+                                <td>Least concern</td> 
+                            </tr>
+                            <tr>
+                                <td>European badger</td> 
+                                <td>Meles meles</td> 
+                                <td>Least concern</td> 
+                            </tr>
+                            <tr>
+                                <td>Stag beetle</td>  
+                                <td>Lucanus cervus</td> 
+                                <td>Priority species</td> 
+                            </tr>
+                        </tbody>
+                    </table>
+                    <br>
                     <h6>Here is some of my own photography from this wonderful location:</h6>
+                </div>
+                <div class="container gallery">
+                    <div class="row no-gutters justify-content-start">
+                        <div class="col">
+                            <img class="rounded" alt="melting snow" src="Pictures/meltingsnow.jpg">
+                        </div>
+                        <div class="col">
+                            <img class="rounded" alt="sunset tree" src="Pictures/parktrees.jpg">
+                        </div>
+                        <div class="col">
+                            <img class="rounded" alt="deer in snow" src="Pictures/parksnowdeer.jpg">
+                        </div>
+                        <div class="col">
+                            <img class="rounded" alt="sunset pond" src="Pictures/richmondpark.jpg">
+                        </div>
+                        <div class="col">
+                            <img class="rounded" alt="deer in shade" src="Pictures/deer.jpg">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="footer">
