--- a/nintendo.html
+++ b/nintendo.html
@@ -10,7 +10,7 @@
     <body>
         <div id="page-container">
             <div id="page-content">
-                <nav class="nav-banner navbar navbar-expand-sm sticky-top navbar-light border border-info">
+                <nav class="nav-banner navbar navbar-expand-sm sticky-top navbar-light border-bottom border-info">
                     <a class="navbar-brand" href="index.html"><img src="logo.png" alt="Tom's Logo"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -22,83 +22,70 @@
                             <li class="nav-item">
                                 <a class="nav-link link-nowrap" href="about.html">About Me</a></li>
                             <li class="nav-item active">
-                                <a class="nav-link link-nowrap" href="nintendo.html">My Nintendo<span class="sr-only">(current)</span></a></li>
+                                <a class="nav-link link-nowrap" href="nintendo.html">Nintendo<span class="sr-only">(current)</span></a></li>
                             <li class="nav-item">
                                 <a class="nav-link link-nowrap" href="richmondpark.html">Richmond Park</a></li>
                         </ul>
                     </div>
                 </nav>
-                <div class="container topic-content">
-                    <div class="row">
-                        <div class="col">
-                            <h3>Nintendo Collection</h3>
-                            <p>I am a huge fan of video games, which you’ll already know if you’ve bored yourself with my ‘About Me’ section. In particular I love all things Nintendo, an affair that began around 1990 when I got my first console, the NES. Ever since I have been building my collection and now have around a dozen consoles and hundreds of games.</p>
-                            <p>Although the NES wasn’t my earliest gaming experience (that honour went to Dad’s Sinclair ZX Spectrum!) it was the one that combined the excitement of having my very own system and my introduction to the timeless game design of Nintendo.</p> 
-                            <p>My favourite Nintendo console would have to be the Super Nintendo (SNES), which also happens to be home to my favourite Nintendo game Super Mario World 2: Yoshi’s Island. The SNES era was in my opinion the golden age of 2D gaming and pixel art and indeed inspires many indie game developers today who continue to create metroidvania and JRPG games very reminiscent of the time.</p>              
-                        </div>
-                        <div class="col topic-info">
-                            <h6 class="info-table-heading">My Top Five Super Mario Games!</h6>
-                            <table class="table table-sm mytops">
-                                <thead>
-                                    <tr>
-                                        <td>Game Title</td>
-                                        <td>Console</td>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <ol>
-                                                <li>SMW2: Yoshi's Island</li>
-                                                <li>Super Mario Bros. 3</li>
-                                                <li>Super Mario 64</li>
-                                                <li>Super Mario World</li>
-                                                <li>Super Mario Sunshine</li>
-                                            </ol>
-                                        </td>
-                                        <td>
-                                            <ul>
-                                                <li>Super Nintendo</li>
-                                                <li>NES</li>
-                                                <li>Nintendo 64</li>
-                                                <li>Super Nintendo</li>
-                                                <li>Gamecube</li>
-                                            </ul>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <div id="carouselExampleIndicators" class="carousel slide">
-                                <ol class="carousel-indicators">
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                                </ol>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img src="Pictures/collection.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                      <img src="Pictures/nesboxed.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                      <img src="Pictures/nintendo.jpg" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                      <img src="Pictures/merchandise.jpg" class="d-block w-100" alt="...">
-                                    </div>
+                <div class="container topic-content flex-topic">
+                    <div class="topic-text">
+                        <h3>Nintendo Collection</h3>
+                        <p>I am a huge fan of video games, which you’ll already know if you’ve bored yourself with my ‘About Me’ section. In particular I love all things Nintendo, an affair that began around 1990 when I got my first console, the NES. Ever since I have been building my collection and now have around a dozen consoles and hundreds of games.</p>
+                        <p>Although the NES wasn’t my earliest gaming experience (that honour went to Dad’s Sinclair ZX Spectrum!) it was the one that combined the excitement of having my very own system and my introduction to the timeless game design of Nintendo.</p> 
+                        <p>My favourite Nintendo console would have to be the Super Nintendo (SNES), which also happens to be home to my favourite Nintendo game Super Mario World 2: Yoshi’s Island. The SNES era was in my opinion the golden age of 2D gaming and pixel art and indeed inspires many indie game developers today who continue to create metroidvania and JRPG games very reminiscent of the time.</p>              
+                    </div>
+                    <div class="topic-info">
+                        <table class="table table-sm">
+                            <thead>
+                                <tr>
+                                    <td>My Top Five Super Mario Games!</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <ol>
+                                            <li>SMW2: Yoshi's Island (Super Nintendo)</li>
+                                            <li>Super Mario Bros. 3 (NES)</li>
+                                            <li>Super Mario 64 (Nintendo 64)</li>
+                                            <li>Super Mario World (Super Nintendo)</li>
+                                            <li>Super Mario Sunshine (Gamecube)</li>
+                                        </ol>
+                                    </td>             
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div id="carouselExampleIndicators" class="carousel slide">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="Pictures/consolesetup.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>
-                            </div>  
-                        </div>
+                                <div class="carousel-item">
+                                  <img src="Pictures/nesboxed.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                  <img src="Pictures/nintendo.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                  <img src="Pictures/merchandise.jpg" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>  
                     </div>
                 </div>
             </div>
